# gpr300-sp24-Yuuki-Endo

./: CMakeLists.txt  README.md
assignments/Assignment1/: CMakeLists.txt  main.cpp
assignments/Assignment1/assets/: lit.vert  postprocess.frag  postprocess.vert
assignments/Assignment2/: CMakeLists.txt  main.cpp
assignments/Assignment2/assets/: lit.frag  lit.vert
assignments/assignment0/: CMakeLists.txt  main.cpp
assignments/assignment0/assets/: Suzanne.fbx  defaultLit.frag  defaultLit.vert
assignments/assignment1_postProcess/: CMakeLists.txt  main.cpp
assignments/assignment1_postProcess/assets/: defaultLit.frag  defaultLit.vert  fsQuad.vert  postProcess.frag  unlit.frag  unlit.vert
core/: CMakeLists.txt
core/ew/: camera.h  cameraController.cpp  cameraController.h  framebuffer.h  mesh.cpp  mesh.h  model.cpp  model.h  procGen.cpp  shader.cpp  shader.h  texture.cpp  texture.h  transform.h
core/ew/ewMath/: ewMath.h  mat4.h  quaternion.cpp  quaternion.h  transformations.h  vec3.cpp  vec3.h
